--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Redirecting...</title>
   </head>
   <body>
-    <p>Redirecting to <a href="https://linktr.ee/avisvox">Linktree</a>...</p>
+    <p>Redirecting to <a href="https://linktr.ee/avisvox">linktr.ee/avisvox</a>...</p>
   </body>
 </html>
